# led-star

./: .gitignore  Cargo.toml  README.md  flake.nix  original.c
.clinerules/: documentation.md  rust.md
.github/workflows/: ci.yml  dependencies.yml  pages.yml
arduino/: Cargo.toml  avr-atmega328p.json
arduino/.cargo/: config.toml
arduino/src/: main.rs  ws2812.rs
lib/: Cargo.toml  build.rs
lib/src/: color.rs  config.rs  lib.rs  osc.rs  pattern.rs  rand.rs  slotmap.rs  star.rs  storage.rs  streak.rs
lib/src/osc/: lut.rs
lib/src/snapshots/: led_star__streak__tests__streak_spawner_basic.snap  led_star__streak__tests__streak_spawner_slow.snap
visualizer/: Cargo.toml
visualizer/src/: lib.rs
visualizer/web/: index.html  package-lock.json  package.json  vite.config.ts
visualizer/web/src/: App.css  App.tsx  animation.ts  index.css  wasm.ts
xtask/src/: commands.rs
xtask/src/commands/: arduino.rs  build.rs  test.rs  visualizer.rs
