[package]
name = "led-star"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
std = []
wasm = ["dep:wasm-bindgen"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
bolero.workspace = true
insta.workspace = true
