[package]
name = "led-star-visualizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

# Increase WASM memory (16 pages = 1MB)
[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[dependencies]
led-star = { path = "../lib", features = ["std", "wasm"] }
wasm-bindgen = "0.2"

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true
